# nuvemshop_bot

./: README.md
winona/: app.py  bot.py  model.py  pyproject.toml
winona/data/: orders_20250408_174258.xls
