[tool.poetry]
name = "web-scraper-bot"
version = "0.1.0"
description = "A web scraping bot using Selenium and BeautifulSoup"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.12.2"
selenium = "^4.18.1"
beautifulsoup4 = "^4.12.3"
webdriver-manager = "^4.0.1"
python-dotenv = "^1.0.0"
dotenv = "^0.9.9"
streamlit = "^1.44.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
